--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-Hello world!
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/images/logo.ico"/>
+    <title>Kubernetes</title>
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top" id="top-navbar" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <a class="navbar-brand nav-logo" href="/"><img src="/images/logotext.svg" id="nav-logo-img" alt="logo" /></a>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/gettingstarted">Getting Started</a></li>
+            <li><a href="/community">Community</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="//blog.kubernetes.io">Blog</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="jumbotron home-jumbotron">
+      <div class="container text-center">
+        <img src="/images/titlelogo.svg" style="width:500px"/>
+        <br />
+        <br />
+        <p>Manage a cluster of Linux containers as a single system to accelerate Dev and simplify Ops.</p>
+        <p>
+        <a class="btn k8s-btn btn-lg" role="button" href="https://github.com/googlecloudplatform/kubernetes"><img id="github-logo" src="/images/github-logo.svg" style="width:23px"> View on GitHub</a>
+          <a class="btn k8s-btn btn-lg" role="button" href="/gettingstarted">Try Kubernetes &raquo;</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="container">
+        <p>Package your application up with Docker, then let Kubernetes manage and run it for you. Kubernetes is a community driven cluster manager that goes wherever your Linux application container can go, from your laptop to the cloud and anywhere in between. It was created by Google drawing on over ten years of experience running containers at massive scale, but is owned and powered by a diverse set of contributors.</p>
+      </div>
+      <div class="container">
+        <h3>Kubernetes is</h3>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-3">
+              <img class="k8s-is-img" src="/images/lightweight.svg" alt="leaves" />
+              <br />
+              <br />
+              <p><b>Lean</b></p>
+              <p>Lightweight, simple and accessible</p>
+            </div>
+            <div class="col-md-3">
+              <img class="k8s-is-img" src="/images/portable.svg" alt="leaves" />
+              <br />
+              <br />
+              <p><b>Portable</b></p>
+              <p>Built for a multi-cloud world, public, private or hybrid</p>
+            </div>
+            <div class="col-md-3">
+              <img class="k8s-is-img" src="/images/composable.svg" alt="leaves" />
+              <br />
+              <br />
+              <p><b>Extensible</b></p>
+              <p>Written in Go, highly modular and designed from the start to be adaptable and extensible</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <h3>Talk to us!</h3>
+        <p>We would love to hear from you, how you are using Kubernetes, and what we can do to make it better.</p>
+        <p>Our IRC channel is the best way to contact our engineers and share your ideas with them. They hang out at <a href="http://webchat.freenode.net/?channels=google-containers" target="_blank">#google-containers</a> on Freenode.</p>
+        <p>Our user forum on <a href="http://stackoverflow.com/questions/tagged/kubernetes" target="_blank">stackoverflow</a> is a great place to go for community support.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <hr>
+      <footer>
+        <p>&copy; Kubernetes 2014</p>
+      </footer>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+  </body>
+</html>
