Using relative links

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/images/logo.ico"/>
+    <link rel="shortcut icon" href="images/logo.ico"/>
     <title>Kubernetes</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="navbar navbar-fixed-top" id="top-navbar" role="navigation">
@@ -22,14 +22,14 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        <a class="navbar-brand nav-logo" href="/"><img src="/images/logotext.svg" id="nav-logo-img" alt="logo" /></a>
+        <a class="navbar-brand nav-logo" href=""><img src="images/logotext.svg" id="nav-logo-img" alt="logo" /></a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/gettingstarted">Getting Started</a></li>
-            <li><a href="/community">Community</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/events">Events</a></li>
+            <li class="active"><a href="">Home</a></li>
+            <li><a href="gettingstarted">Getting Started</a></li>
+            <li><a href="community">Community</a></li>
+            <li><a href="news">News</a></li>
+            <li><a href="events">Events</a></li>
             <li><a href="//blog.kubernetes.io">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -38,13 +38,13 @@
 
     <div class="jumbotron home-jumbotron">
       <div class="container text-center">
-        <img src="/images/titlelogo.svg" style="width:500px"/>
+        <img src="images/titlelogo.svg" style="width:500px"/>
         <br />
         <br />
         <p>Manage a cluster of Linux containers as a single system to accelerate Dev and simplify Ops.</p>
         <p>
-        <a class="btn k8s-btn btn-lg" role="button" href="https://github.com/googlecloudplatform/kubernetes"><img id="github-logo" src="/images/github-logo.svg" style="width:23px"> View on GitHub</a>
-          <a class="btn k8s-btn btn-lg" role="button" href="/gettingstarted">Try Kubernetes &raquo;</a>
+        <a class="btn k8s-btn btn-lg" role="button" href="https://github.com/googlecloudplatform/kubernetes"><img id="github-logo" src="images/github-logo.svg" style="width:23px"> View on GitHub</a>
+          <a class="btn k8s-btn btn-lg" role="button" href="gettingstarted">Try Kubernetes &raquo;</a>
         </p>
       </div>
     </div>
@@ -60,21 +60,21 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-3">
-              <img class="k8s-is-img" src="/images/lightweight.svg" alt="leaves" />
+              <img class="k8s-is-img" src="images/lightweight.svg" alt="leaves" />
               <br />
               <br />
               <p><b>Lean</b></p>
               <p>Lightweight, simple and accessible</p>
             </div>
             <div class="col-md-3">
-              <img class="k8s-is-img" src="/images/portable.svg" alt="leaves" />
+              <img class="k8s-is-img" src="images/portable.svg" alt="leaves" />
               <br />
               <br />
               <p><b>Portable</b></p>
               <p>Built for a multi-cloud world, public, private or hybrid</p>
             </div>
             <div class="col-md-3">
-              <img class="k8s-is-img" src="/images/composable.svg" alt="leaves" />
+              <img class="k8s-is-img" src="images/composable.svg" alt="leaves" />
               <br />
               <br />
               <p><b>Extensible</b></p>
@@ -100,6 +100,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
